--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -50,6 +50,9 @@
        <property name="showGrid">
         <bool>false</bool>
        </property>
+       <property name="sortingEnabled">
+        <bool>true</bool>
+       </property>
        <property name="wordWrap">
         <bool>false</bool>
        </property>
