User properties dialog added for SAM editor.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -97,7 +97,14 @@
          </attribute>
          <layout class="QVBoxLayout" name="verticalLayout_3">
           <item>
-           <widget class="QTableView" name="tableUsers"/>
+           <widget class="QTableView" name="tableUsers">
+            <property name="selectionMode">
+             <enum>QAbstractItemView::SingleSelection</enum>
+            </property>
+            <property name="selectionBehavior">
+             <enum>QAbstractItemView::SelectRows</enum>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
