Promoting users to admin and unlocking. Fixed some bugs in original libsam code within sam_put_user_grpids.

--- a/userdialog.ui
+++ b/userdialog.ui
@@ -271,7 +271,7 @@
      <item>
       <widget class="QPushButton" name="btnUnlock">
        <property name="toolTip">
-        <string>Unlocks and enables disabled account</string>
+        <string>Lock, unlock and enables user account</string>
        </property>
        <property name="text">
         <string>Unlock</string>
