--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>550</width>
-    <height>330</height>
+    <width>830</width>
+    <height>444</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -119,7 +119,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>550</width>
+     <width>830</width>
      <height>21</height>
     </rect>
    </property>
@@ -155,7 +155,28 @@
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionOpenHive"/>
+   <addaction name="actionOpenHiveRO"/>
+   <addaction name="actionImport"/>
+   <addaction name="separator"/>
+   <addaction name="actionFind"/>
+   <addaction name="actionFindAgain"/>
+  </widget>
   <action name="actionOpenHive">
+   <property name="icon">
+    <iconset resource="qregedit.qrc">
+     <normaloff>:/icons/folder</normaloff>:/icons/folder</iconset>
+   </property>
    <property name="text">
     <string>&amp;Open hive...</string>
    </property>
@@ -166,6 +187,10 @@
    </property>
   </action>
   <action name="actionOpenHiveRO">
+   <property name="icon">
+    <iconset resource="qregedit.qrc">
+     <normaloff>:/icons/folder-locked</normaloff>:/icons/folder-locked</iconset>
+   </property>
    <property name="text">
     <string>Open &amp;hive in read only mode...</string>
    </property>
@@ -186,6 +211,10 @@
    </property>
   </action>
   <action name="actionFind">
+   <property name="icon">
+    <iconset resource="qregedit.qrc">
+     <normaloff>:/icons/edit-find</normaloff>:/icons/edit-find</iconset>
+   </property>
    <property name="text">
     <string>&amp;Find...</string>
    </property>
@@ -194,6 +223,10 @@
    </property>
   </action>
   <action name="actionFindAgain">
+   <property name="icon">
+    <iconset resource="qregedit.qrc">
+     <normaloff>:/icons/go-next</normaloff>:/icons/go-next</iconset>
+   </property>
    <property name="text">
     <string>Find &amp;again</string>
    </property>
@@ -202,6 +235,10 @@
    </property>
   </action>
   <action name="actionImport">
+   <property name="icon">
+    <iconset resource="qregedit.qrc">
+     <normaloff>:/icons/document-import</normaloff>:/icons/document-import</iconset>
+   </property>
    <property name="text">
     <string>&amp;Import...</string>
    </property>
@@ -213,6 +250,8 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="qregedit.qrc"/>
+ </resources>
  <connections/>
 </ui>
